added boundaries for user inputs on seed and # of players

--- a/asgn1/Makefile
+++ b/asgn1/Makefile
@@ -1,10 +1,10 @@
 CC = clang
-CFLAGS = -Wall -Wextra -Werror -Wpendantic
+CFLAGS = -Wall -Wextra -Werror -Wpedantic
 
 all: lrc
 
 lrc: lrc.o
-	$(CC) -o lrc lrc.o
+	$(CC) $(CFLAGS) -o lrc lrc.o
 	
 lrc.o: lrc.c
 	$(CC) $(CFLAGS) -c lrc.c
