--- a/asgn6/Makefile
+++ b/asgn6/Makefile
@@ -1,14 +1,25 @@
 CC = clang
 CFLAGS = -Wall -Wextra -Werror -Wpedantic
 
-all: test
+all: encode decode entropy
 
-test: test.o node.o pq.o stack.o code.o io.o huffman.o
-	$(CC) $(CFLAGS) -o test test.o node.o pq.o stack.o code.o io.o huffman.o -lm
 
+encode: encode.o node.o pq.o stack.o code.o io.o huffman.o 
+	$(CC) $(CFLAGS) -o encode encode.o node.o pq.o stack.o code.o io.o huffman.o -lm
+decode: decode.o node.o pq.o stack.o code.o io.o huffman.o 
+	$(CC) $(CFLAGS) -o decode decode.o node.o pq.o stack.o code.o io.o huffman.o -lm
+entropy: entropy.o
+	$(CC) $(CFLAGS) -o entropy entropy.o -lm
+decode.o: decode.c
+	$(CC) $(CFLAGS) -c decode.c
+encode.o: encode.c
+	$(CC) $(CFLAGS) -c encode.c
+entropy.o: entropy.c
+	$(CC) $(CFLAGS) -c entropy.c
 test.o: test.c
 	$(CC) $(CFLAGS) -c test.c
-
+entropy.o: entropy.c
+	$(CC) $(CFLAGS) -c entropy.c
 node.o: node.c
 	$(CC) $(CFLAGS) -c node.c
 
@@ -29,3 +40,5 @@ huffman.o: huffman.c
 
 clean:
 	rm -f *.o test
+format:
+	clang-format -i -style=file *.h *.c
