--- a/asgn7/Makefile
+++ b/asgn7/Makefile
@@ -1,13 +1,13 @@
 CC = clang
 CFLAGS = -Wall -Wextra -Wpedantic
 
-all: test
+all: banhammer
 
-test: test.o bv.o bf.o speck.o
-	$(CC) $(CFLAGS) -o test test.o bv.o bf.o speck.o -lm
+banhammer: banhammer.o bv.o bf.o speck.o node.o ll.o ht.o parser.o
+	$(CC) $(CFLAGS) -o banhammer banhammer.o bv.o bf.o speck.o node.o ll.o ht.o parser.o -lm
 
-test.o: test.c
-	$(CC) $(CFLAGS) -c test.c
+banhammer.o: banhammer.c
+	$(CC) $(CFLAGS) -c banhammer.c
 
 bv.o: bv.c
 	$(CC) $(CFLAGS) -c bv.c
@@ -17,3 +17,15 @@ bf.o: bf.c
 
 speck.o: speck.c
 	$(CC) $(CFLAGS) -c speck.c
+
+node.o: node.c
+	$(CC) $(CFLAGS) -c node.c
+
+ll.o: ll.c
+	$(CC) $(CFLAGS) -c ll.c
+
+ht.o: ht.c
+	$(CC) $(CFLAGS) -c ht.c
+
+parser.o: parser.c
+	$(CC) $(CFLAGS) -c parser.c
